--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,46 @@
-div {
-    color: aqua;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.container {
+    width: 50vw;
+    height: 30vh;
+    display: flex;
+    justify-content: space-between;
+}
+h1 {
+    font-size: 3em;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+.poster {
+    width: 250px;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 8px;
+    position: relative;
+}
+.poster h2 {
+    position: absolute;
+    background: black;
+    color: white;
+    width: 100%;
+    padding: .5em;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.2rem;
+    bottom: 0;
+}
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
